[package]
name = "caipiao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
regex = "1.9.1"
xlsxwriter = "0.6"
futures = "0.3.28"

